[package]
name = "trident"
version = "0.1.0"
edition = "2021"
default-run = "trident"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
anyhow = "1.0"
clap = {version = "3.0.0-rc.7", features = ["derive"] }
crossbeam = "0.8.1"
enum_dispatch = "0.3.7"
flexi_logger = "0.20"
futures = "~0.3"
hostname = "0.3.1"
humantime-serde = "1.0"
k8s-openapi =  {version = "0.13", default-features = false, features = ["v1_22"] }
kube = { version = "0.64", features = ["runtime","derive"] }
log = "0.4"
neli = "0.5.3"
nix = "0.23"
nom = "7.0.0"
nom-derive = "0.10.0"
parking_lot = "0.11"
prost = "0.8.0"
regex = "1"
ring = "0.16.20"
roxmltree = "0.14.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
signal-hook = "0.3"
sysinfo = { version = "0.20", default-features = false }
thiserror = "1.0"
tokio = { version = "1.12.0", features = ["full"] }
tonic = "0.5.2"


[dev-dependencies]
flexi_logger = "0.20"

[build-dependencies]
tonic-build = "0.5.2"

[features]
