[package]
name = "deepflow-agent"
version = "0.1.0"
edition = "2021"
default-run = "deepflow-agent"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
ahash = "0.8.3"
anyhow = "1.0"
arc-swap = "1.5.0"
base64 = "0.13.0"
bincode = "2.0.0-rc.1"
bitflags = "1.3.2"
bson = "2.7.0"
bytesize = "1.1.0"
cadence = "0.27.0"
chrono = "0.4"
clap = { version = "3.2.8", features = ["derive"] }
cloud_platform = { path = "plugins/cloud_platform" }
dashmap = "5.3.3"
dns-lookup = "1.0.8"
elf = "0.4.0"
enum_dispatch = "0.3.7"
flate2 = "1.0.23"
# the feature flag fixes the following problem:
#
#     [flexi_logger][ERRCODE::Time] flexi_logger works with UTC rather than with local time, caused by IndeterminateOffset
#       See https://docs.rs/flexi_logger/latest/flexi_logger/error_info/index.html#time
flexi_logger = { version = "0.23.3", features = ["use_chrono_for_offset"] }
futures = "~0.3"
grpc = { path = "plugins/grpc" }
hex = "0.4.3"
hostname = "0.3.1"
http = "0.2.5"
humantime-serde = "1.0"
hyper = { version = "0.14", features = ["full"] }
ipnet = "2.4.0"
ipnetwork = "0.18.0"
l7 = { path = "plugins/l7" }
libc = "0.2.103"
log = "0.4"
lru = "0.9.0"
md-5 = "0.10.1"
nom = "7.1.1"
npb_handler = { path = "plugins/npb_handler" }
npb_pcap_policy = { path = "plugins/npb_pcap_policy" }
num_enum = "0.5.7"
packet_dedup = { path = "plugins/packet_dedup" }
packet_sequence_block = { path = "plugins/packet_sequence_block" }
page_size = "0.4.2"
parking_lot = "0.11"
pcap_assembler = { path = "plugins/pcap_assembler" }
pcap-sys = "0.1.3"
pnet = "^0.29"
prost = "0.11.0"
public = { path = "crates/public" }
rand = "0.8.5"
regex = "1"
reqwest = { version = "0.11", default-features = false, features = [
    "blocking",
    "json",
    "rustls-tls",
] }
ring = "0.16.20"
roxmltree = "0.14.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.72"
serde_yaml = "0.8"
signal-hook = "0.3"
socket2 = "0.4.4"
special_recv_engine = { path = "plugins/special_recv_engine" }
sysinfo = { version = "0.26", default-features = false }
thiserror = "1.0"
time = "0.3.9"
tokio = { version = "1.20.1", features = ["full"] }
tonic = "0.8.1"
envmnt = "0.10.4"
wasmtime = "12.0.1"
wasmtime-wasi = "12.0.1"

[target.'cfg(any(target_os = "linux", target_os = "android"))'.dependencies]
cgroups-rs = "0.2.9"
nix = "0.23"
pcap = "0.9.1"
procfs = { git = "https://github.com/deepflowio/procfs/" }

[target.'cfg(target_os = "linux")'.dependencies]
k8s-openapi = { version = "^0.15", features = ["v1_19", "schemars"] }
kube = { version = "0.74", default-features = false, features = [
    "client",
    "derive",
    "runtime",
    "rustls-tls",
] }
kube-derive = "0.74"
openshift-openapi = { version = "0.3.1", features = ["v4_6"] }
schemars = "0.8"

[patch.crates-io]
kube = { git = "https://github.com/deepflowio/kube", tag = "0.74.2" }
openshift-openapi = { git = "https://github.com/deepflowio/openshift-openapi.git" }

[target.'cfg(target_os = "windows")'.dependencies]
pcap = "0.10.1"
winapi = { version = "0.3.9", features = [
    "errhandlingapi",
    "libloaderapi",
    "minwindef",
    "winerror",
] }
windows = { version = "0.30", features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
] }

[dev-dependencies]
criterion = "0.3.5"
lru = "0.9.0"
tempfile = "3.2.0"
uluru = "3.0.0"

[build-dependencies]
chrono = "0.4"
dunce = "0.1.1"
tonic-build = "0.8.0"

[features]

[[bench]]
name = "common"
harness = false

[[bench]]
name = "flow_generator"
harness = false

[[bench]]
name = "utils"
harness = false

[[bench]]
name = "lru"
harness = false

[[bench]]
name = "labeler"
harness = false

[profile.release]
panic = 'abort'

[profile.dev]
panic = 'abort'
debug-assertions = false
overflow-checks = false
