[package]
name = "public-derive"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
cfg-if.workspace = true
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"

# Using anything in public crate will cause linking error under windows thus should be avoided.
[target.'cfg(not(target_os = "windows"))'.dependencies]
public.workspace = true

[dev-dependencies]
public.workspace = true
trybuild = "1.0"
