[package]
name = "public"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc-swap = "1.5.0"
bincode = "2.0.0-rc.1"
bitflags = "1.3.2"
cadence = "0.27.0"
log = "0.4"
num_enum = "0.5.6"
parking_lot = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.72"
serde_yaml = "0.8"
thiserror = "1.0"
tonic = "0.8.1"
