[package]
name = "public"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3.2"
cadence = "0.27.0"
num_enum = "0.5.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.72"
serde_yaml = "0.8"
thiserror = "1.0"
