[package]
name = "public"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc-swap = "1.5.0"
bincode = "2.0.0-rc.3"
bitflags = "1.3.2"
cadence = "0.27.0"
flate2 = "1.0.23"
libc = "0.2.103"
log = "0.4"
num_enum = "0.5.6"
parking_lot = "0.11"
pnet = "^0.29"
prost = "0.11.0"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.72"
serde_yaml = "0.8"
socket2 = "0.4"
thiserror = "1.0"
tonic = "0.8.1"

[target.'cfg(target_os = "linux")'.dependencies]
neli = "0.6.2"
nix = "0.23"

[target.'cfg(target_os = "windows")'.dependencies]
pcap = "0.10.1"
windows = { version = "0.30", features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
] }

[build-dependencies]
tonic-build = "0.8.0"
