[package]
name = "trace-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
ahash = "0.8"
btf-rs = "1.1"
cfg-if = "1.0"
gimli = "0.31"
libc = "0.2"
log = "0.4"
object = "0.36"
regex.workspace = true
rustc-demangle = "0.1"
semver = "1.0"
thiserror = "1.0"
nix = { version = "0.29", features = ["sched"] }
procfs = "0.16"
once_cell = "1.21"

[build-dependencies]
cc = "1.0"

[dev-dependencies]
env_logger = "0.11"
